--- a/week03/code/index.html
+++ b/week03/code/index.html
@@ -1,13 +1,32 @@
 <html>
     <head>
         <title>week03</title>
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Assistant:wght@600&family=IBM+Plex+Sans:ital,wght@0,500;1,500&family=Montserrat&family=Nabla&display=swap" rel="stylesheet">
+        <meta name="viewport" content="width=device-width, initial-scale=1" />
         <link rel="stylesheet" href="theStyle.css"> 
     </head>
     <body >
      <main>
+        here is some text it does not have a close parent. it is in main. 
+        <p class="unicorns">
+            hello CSS
+        </p>  
+        <p id="horse">
+            hello CSS
+        </p>  
+        <p class="unicorns">
+            hello CSS
+        </p>  
         <p>
             hello CSS
         </p>  
+        <p class="unicorns">
+            hello CSS
+        </p> 
      </main>
+     this is more text not in 
+
     </body>
 </html>
