--- a/week04/code/index.html
+++ b/week04/code/index.html
@@ -3,7 +3,9 @@
         <title>week04</title>
         <link href="https://fonts.googleapis.com/css2?family=Assistant:wght@600&family=IBM+Plex+Sans:ital,wght@0,500;1,500&family=Montserrat&family=Nabla&display=swap" rel="stylesheet">
         <meta name="viewport" content="width=device-width, initial-scale=1" />
+        <script src="https://cdn.jsdelivr.net/npm/p5@1.7.0/lib/p5.js"></script>
         <link rel="stylesheet" href="theStyle.css"> 
+        <!-- <script src="theSketch.js"></script> -->
     </head>
     <body >
      <main>
