--- a/week04/code/index.html
+++ b/week04/code/index.html
@@ -23,5 +23,15 @@
         <p class="ocean">this is a paragraph</p>
         <p id="theFoot">this is a paragraph</p>
      </main>
+     <footer>
+        <p>this is other content</p>
+        <p>i am grid item</p>
+        <p>i am grid item</p>
+        <p>i am grid item</p>
+        <p>i am grid item</p>
+        <p>i am grid item</p>
+        <p>i am grid item</p>
+        <p>i am grid item</p>
+    </footer>
     </body>
 </html>
