--- a/week09/code/index.html
+++ b/week09/code/index.html
@@ -9,7 +9,7 @@
             <h3>To do List:</h3>
             
             <label for="name">New list item:</label>
-            <input type="text" id="name" required minlength="4" maxlength="8" size="10" /></input>
+            <input type="text" id="potato" required minlength="4" maxlength="8" size="10" /></input>
             
          <button>make line item</button>
          <p>erase list</p>
